# kubera-reporting

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ai_query.py  basic_usage.py
kubera_reporting/: __init__.py  allocation.py  chart_generator.py  cli.py  currency_format.py  emailer.py  exceptions.py  fetcher.py  html_formatter.py  llm_client.py  prompts.py  reporter.py  storage.py  types.py
kubera_reporting/templates/: report_template.html
sample_reports/: README.md  sample_report_eur.html  sample_report_first_day.html  sample_report_gbp.html  sample_report_with_deltas.html
tests/: __init__.py  test_currency_formatting.py  test_end_to_end.py  test_examples.py  test_multi_period.py  test_reporter.py  test_send_command.py  test_storage.py
tests/fixtures/: snapshot_2025-01-15.json  snapshot_2025-01-16.json  snapshot_eur_2025-01-15.json  snapshot_eur_2025-01-16.json  snapshot_gbp_2025-01-15.json  snapshot_gbp_2025-01-16.json
